@@ -7,6 +7,7 @@
 <H1>Whitespace Test</H1>
 
 <P>Test <I>italic</I> <B>bold</B> <STRIKE>strikethrough</STRIKE>
+<A HREF="basic.html">Link</A>
 
 </BODY>
 </HTML>
